[project]
name = "advent-of-code-2023"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "numba>=0.60.0",
    "tqdm>=4.67.0",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "ruff>=0.7.4",
]
